--- a/aui/src/layout.css
+++ b/aui/src/layout.css
@@ -368,6 +368,10 @@ main {
     transition: 0.5s background-color, 0.5s color;
 }
 
+body[aui-mode="web"] main {
+    position: static;
+}
+
 [dir="rtl"] main {
     left: unset;
     right: 0;
